--- a/packages/planner/src/screens/EventScreen.module.css
+++ b/packages/planner/src/screens/EventScreen.module.css
@@ -146,6 +146,21 @@
   font-size: var(--text-sm);
 }
 
+.tournamentLink {
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  font-weight: 600;
+  color: var(--color-primary);
+  cursor: pointer;
+  text-align: left;
+}
+
+.tournamentLink:active {
+  opacity: 0.7;
+}
+
 .tournamentMeta {
   display: flex;
   flex-wrap: wrap;
